--- a/Portfolio  Site/css/main.css
+++ b/Portfolio  Site/css/main.css
@@ -7,6 +7,10 @@
    text-decoration: none;
  }
 
+ html {
+   box-sizing: border-box;
+ }
+
  /* ============================================== */
  /* Style Guide */
  /* ============================================== */
@@ -58,9 +62,7 @@
  /* ============================================== */
 
  .nav-container {
-   display: block;
    margin: 0%;
-   position: relative;
    width: 100%;
    height: 60px;
    background-color: var(--secondary-background);
@@ -68,15 +70,6 @@
    font-size: 40px;
  }
 
- .nav-item {
-   display: block;
-   float: left;
-   padding-left: 2%;
- }
-
- html {
-   box-sizing: border-box;
- }
 
  nav {
    background: #6179ff;
@@ -84,9 +77,8 @@
    z-index: 1;
  }
 
- nav #brand {
+ #brand {
    float: left;
-   display: block;
    margin-left: 20px;
    font-size: 50px;
    line-height: 70px;
@@ -104,13 +96,12 @@
  }
 
  nav .menu {
-   float: left;
-   left: 15%;
-   position: relative;
+   display: flex;
+   padding-left: 10%;
  }
 
  nav .menu li {
-   display: inline-block;
+   display: flex;
    padding: 0px 30px;
    cursor: pointer;
    line-height: 70px;
@@ -134,7 +125,6 @@
    width: 40px;
    height: 40px;
    cursor: pointer;
-   float: right;
    transition: all 0.3s ease-out;
    opacity: 0;
  }
@@ -167,20 +157,17 @@
    visibility: hidden;
    opacity: 0;
    transition: all 0.3s ease-out;
-   display: table;
  }
 
  #resize .menu {
    height: 50px;
-   display: table-cell;
    vertical-align: middle;
+   padding-top: 25vh;
  }
 
  #resize .menu li {
-   display: block;
    text-align: center;
    padding: 20px 0;
-   text-align: center;
    font-size: 50px;
    min-height: 50px;
    font-weight: bold;
@@ -272,8 +259,7 @@
 
 
  .life {
-   display: flex;
-   flex-direction: column;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    background-color: var(--primary-background);
    margin: 0 40px 40px 0;
    width: 300px;
@@ -301,7 +287,7 @@
 
  #contact {
    position: relative;
-   height: 500px;
+   height: 35rem;
    background-color: var(--secondary-background);
 
  }
